fixed light and dark mode

--- a/src/component/widgets/widgets.scss
+++ b/src/component/widgets/widgets.scss
@@ -1,4 +1,4 @@
-.widget{
+.widget.dark{
     display: flex;
     flex:1; 
     padding: 10px; 
@@ -6,6 +6,63 @@
     // background-color: yellow; 
     -webkit-box-shadow: 2px 4px 10px 1px rgba(0,0,0,0.47); 
     box-shadow: 2px 4px 10px 1px rgba(201,201,201,0.47); 
+    border-radius: 10px;
+    height: 100px; 
+    .left,.right{
+        display:flex; 
+        flex-direction: column; 
+        justify-content: space-between; 
+        .title{
+            font-weight: bold; 
+            font-style: 14px;
+            color: rgb(160, 160, 160);
+
+        } 
+        .counter{
+            font-size: 28px;
+            font-weight: 300;
+
+        } 
+        .link{
+            width: max-content;
+            font-style: 12px; 
+            border-bottom: 1px solid gray;
+
+        } 
+        .percentage{
+            display: flex;
+            align-items: center;
+            font-size: 14px; 
+            &.positive{
+                color:green;
+            } 
+            &.negative{
+                color:red;
+            }
+
+        } 
+        .icon{ 
+            font-style: 18px; 
+            padding: 5px;
+            // background-color:red; 
+            border-radius: 5px; 
+            align-self: flex-end;
+
+
+
+        }
+    }
+
+}
+    
+.widget{
+    display: flex;
+    flex:1; 
+    padding: 10px; 
+    justify-content: space-between; 
+    // background-color: yellow; 
+    -webkit-box-shadow: 2px 4px 10px 1px rgba(0,0,0,0.47); 
+    box-shadow: 2px 4px 10px 1px rgba(44, 43, 43, 0.47); 
     border-radius: 10px;
     height: 100px; 
     .left,.right{
